--- a/app/src/main/res/layout/drawer_activity.xml
+++ b/app/src/main/res/layout/drawer_activity.xml
@@ -10,7 +10,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/home_content"
+        layout="@layout/drawer_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
