Start to show current weather info

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -17,15 +17,40 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/home_city_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Now"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                android:textSize="34sp"
+                tools:text="Rio de Janeiro" />
 
             <TextView
+                android:id="@+id/home_weather_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="auhiucbisabcibsaicb csnacuiahsbiucbisabci scniucbsaiubciausbciuc sabciubasiubciasbcisabciu csaicbiusabciubsciubsaicub isabcaisbciuasbcicbsaciubicub" />
+                android:textSize="24sp"
+                tools:text="Clear" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/home_temperature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:textSize="67sp"
+                    tools:text="20°" />
+
+                <ImageView
+                    android:id="@+id/home_weather_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:src="@drawable/ic_01d" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -39,49 +64,10 @@
         android:layout_marginRight="@dimen/card_margin">
 
         <LinearLayout
+            android:id="@+id/home_details_content"
             style="@style/Widget.CardContent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Forecast"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="auhiucbisabcibsaicb csnacuiahsbiucbisabci scniucbsaiubciausbciuc sabciubasiubciasbcisabciu csaicbiusabciubsciubsaicub isabcaisbciuasbcicbsaciubicub" />
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/card_margin"
-        android:layout_marginLeft="@dimen/card_margin"
-        android:layout_marginRight="@dimen/card_margin">
-
-        <LinearLayout
-            style="@style/Widget.CardContent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Details"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="auhiucbisabcibsaicb csnacuiahsbiucbisabci scniucbsaiubciausbciuc sabciubasiubciasbcisabciu csaicbiusabciubsciubsaicub isabcaisbciuasbcicbsaciubicub" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"/>
 
     </android.support.v7.widget.CardView>
 
