--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="card_margin">16dp</dimen>
+    <dimen name="default_margin">16dp</dimen>
+
+
 </resources>
