--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -67,7 +68,31 @@
             android:id="@+id/home_details_content"
             style="@style/Widget.CardContent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
+
+            <br.com.porto.isabel.weather.view.DetailCustomView
+                android:id="@+id/home_humidity_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                custom:detailIcon="@drawable/ic_water"
+                custom:detailTitle="@string/humidity_title" />
+
+            <br.com.porto.isabel.weather.view.DetailCustomView
+                android:id="@+id/home_pressure_view"
+                android:layout_marginTop="@dimen/default_margin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                custom:detailIcon="@drawable/ic_pressure"
+                custom:detailTitle="@string/pressure_title" />
+
+            <br.com.porto.isabel.weather.view.DetailCustomView
+                android:layout_marginTop="@dimen/default_margin"
+                android:id="@+id/home_wind_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                custom:detailIcon="@drawable/ic_weather_windy"
+                custom:detailTitle="@string/wind_title" />
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
