Implement the daily adapter to show the forecast info

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,7 @@
     <dimen name="card_margin">16dp</dimen>
     <dimen name="default_margin">16dp</dimen>
 
+    <dimen name="daily_margin">5dp</dimen>
+
 
 </resources>
