--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -79,19 +79,41 @@
 
             <br.com.porto.isabel.weather.view.DetailCustomView
                 android:id="@+id/home_pressure_view"
-                android:layout_marginTop="@dimen/default_margin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_margin"
                 custom:detailIcon="@drawable/ic_pressure"
                 custom:detailTitle="@string/pressure_title" />
 
             <br.com.porto.isabel.weather.view.DetailCustomView
-                android:layout_marginTop="@dimen/default_margin"
                 android:id="@+id/home_wind_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_margin"
                 custom:detailIcon="@drawable/ic_weather_windy"
                 custom:detailTitle="@string/wind_title" />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/card_margin"
+        android:layout_marginLeft="@dimen/card_margin"
+        android:layout_marginRight="@dimen/card_margin">
+
+        <LinearLayout
+            style="@style/Widget.CardContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/home_daily_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
