--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -7,116 +7,130 @@
     android:orientation="vertical"
     android:paddingTop="24dp">
 
-    <android.support.v7.widget.CardView
+    <ProgressBar
+        android:id="@+id/home_progress"
+        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/card_margin">
+        android:layout_height="match_parent"
+        android:indeterminate="true" />
 
-        <LinearLayout
-            style="@style/Widget.CardContent"
+    <LinearLayout
+        android:id="@+id/home_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/home_city_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="34sp"
-                tools:text="Rio de Janeiro" />
-
-            <TextView
-                android:id="@+id/home_weather_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="24sp"
-                tools:text="Clear" />
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/card_margin">
 
             <LinearLayout
+                style="@style/Widget.CardContent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/home_temperature"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/home_city_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:textSize="67sp"
-                    tools:text="20°" />
+                    android:textSize="34sp"
+                    tools:text="Rio de Janeiro" />
 
-                <ImageView
-                    android:id="@+id/home_weather_image"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/home_weather_description"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:src="@drawable/ic_01d" />
+                    android:textSize="24sp"
+                    tools:text="Clear" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/home_temperature"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:textSize="67sp"
+                        tools:text="20°" />
+
+                    <ImageView
+                        android:id="@+id/home_weather_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:src="@drawable/ic_01d" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
 
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/card_margin"
-        android:layout_marginLeft="@dimen/card_margin"
-        android:layout_marginRight="@dimen/card_margin">
-
-        <LinearLayout
-            android:id="@+id/home_details_content"
-            style="@style/Widget.CardContent"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/card_margin"
+            android:layout_marginLeft="@dimen/card_margin"
+            android:layout_marginRight="@dimen/card_margin">
 
-            <br.com.porto.isabel.weather.view.DetailCustomView
-                android:id="@+id/home_humidity_view"
+            <LinearLayout
+                android:id="@+id/home_details_content"
+                style="@style/Widget.CardContent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                custom:detailIcon="@drawable/ic_water"
-                custom:detailTitle="@string/humidity_title" />
+                android:layout_height="wrap_content">
 
-            <br.com.porto.isabel.weather.view.DetailCustomView
-                android:id="@+id/home_pressure_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin"
-                custom:detailIcon="@drawable/ic_pressure"
-                custom:detailTitle="@string/pressure_title" />
+                <br.com.porto.isabel.weather.view.DetailCustomView
+                    android:id="@+id/home_humidity_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    custom:detailIcon="@drawable/ic_water"
+                    custom:detailTitle="@string/humidity_title" />
 
-            <br.com.porto.isabel.weather.view.DetailCustomView
-                android:id="@+id/home_wind_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin"
-                custom:detailIcon="@drawable/ic_weather_windy"
-                custom:detailTitle="@string/wind_title" />
-        </LinearLayout>
+                <br.com.porto.isabel.weather.view.DetailCustomView
+                    android:id="@+id/home_pressure_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_margin"
+                    custom:detailIcon="@drawable/ic_pressure"
+                    custom:detailTitle="@string/pressure_title" />
 
-    </android.support.v7.widget.CardView>
+                <br.com.porto.isabel.weather.view.DetailCustomView
+                    android:id="@+id/home_wind_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_margin"
+                    custom:detailIcon="@drawable/ic_weather_windy"
+                    custom:detailTitle="@string/wind_title" />
+            </LinearLayout>
 
+        </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/card_margin"
-        android:layout_marginLeft="@dimen/card_margin"
-        android:layout_marginRight="@dimen/card_margin">
-
-        <LinearLayout
-            style="@style/Widget.CardContent"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/card_margin"
+            android:layout_marginLeft="@dimen/card_margin"
+            android:layout_marginRight="@dimen/card_margin">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/home_daily_recycler_view"
+            <LinearLayout
+                style="@style/Widget.CardContent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical" />
-        </LinearLayout>
+                android:layout_height="wrap_content">
 
-    </android.support.v7.widget.CardView>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/home_daily_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="vertical" />
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
 
 
 </LinearLayout>
