--- a/app/src/main/res/layout/drawer_content.xml
+++ b/app/src/main/res/layout/drawer_content.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context=".home.DrawerActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -36,9 +35,7 @@
             <FrameLayout xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/toolbar"
-                tools:context=".home.DrawerActivity" />
+                android:layout_height="match_parent" />
 
         </android.support.v4.widget.NestedScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
