--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,6 +8,7 @@
     android:paddingTop="24dp">
 
     <ProgressBar
+        android:visibility="gone"
         android:id="@+id/home_progress"
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="match_parent"
