--- a/app/src/main/res/layout/city_component.xml
+++ b/app/src/main/res/layout/city_component.xml
@@ -3,9 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/default_margin"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/background"
+    android:minHeight="48dp"
+    android:padding="@dimen/default_margin">
 
     <ImageView
         android:layout_width="wrap_content"
