--- a/app/src/main/res/menu/home_drawer.xml
+++ b/app/src/main/res/menu/home_drawer.xml
@@ -5,15 +5,15 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/weather"
-            android:title="Home" />
+            android:title="@string/home_menu" />
         <item
             android:id="@+id/nav_cities"
             android:icon="@drawable/search"
-            android:title="Manage Cities" />
+            android:title="@string/city_manager_menu" />
         <item
             android:id="@+id/nav_forecast"
             android:icon="@drawable/calendar"
-            android:title="Forecast" />
+            android:title="@string/forecast_menu" />
     </group>
 
 
