--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="default_margin">16dp</dimen>
 
     <dimen name="daily_margin">5dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 
 </resources>
