--- a/app/src/main/res/layout/home_nav_header.xml
+++ b/app/src/main/res/layout/home_nav_header.xml
@@ -15,8 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Rio de Janeiro"
-        android:textSize="24sp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="24sp" />
 
 </LinearLayout>
