--- a/app/src/main/res/layout/dialog_custom_view.xml
+++ b/app/src/main/res/layout/dialog_custom_view.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:hint="CITY"
+        android:hint="@string/city_hint"
         android:singleLine="true" />
 </LinearLayout>
