--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -97,8 +97,7 @@
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/home_daily_recycler_view"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scrollbars="vertical" />
+                            android:layout_height="match_parent" />
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
