--- a/app/src/main/res/layout/error_fragment.xml
+++ b/app/src/main/res/layout/error_fragment.xml
@@ -7,11 +7,10 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:gravity="center"
-
+    tools:showIn="@layout/home_fragment"
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/home_weather_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_emoticon_sad" />
