--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,5 +5,5 @@
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
     android:textSize="18sp"
-    android:textColor="@color/white"
+    android:textColor="@color/secondaryText"
     android:textAlignment="inherit"/>
